[package]
name = "onepassword-secret-util"
description = "Enahcne 1password secret expansion with the opx"
license = "MIT"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
argv = "0.1.8"

[[bin]]
name = "opx"
path = "src/main.rs"
