[package]
name = "onepassword-secret-util"
description = "Enahcne 1password secret expansion with the opx"
license = "MIT"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
walkdir = "2.3.2"

[[bin]]
name = "opx"
path = "src/main.rs"
