[package]
name = "opx"
description = "Enhance 1password secret expansion with the opx CLI"
license = "MIT"
version = "0.0.6"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Hacksore/opx"


[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
walkdir = "2.3.2"

[[bin]]
name = "opx"
path = "src/main.rs"
